--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.0/milligram.css"> 
 </head>
 
 <body>
@@ -23,6 +24,5 @@
         </div>
     </div>
 
-</div>
 </body>
 </html>
