Added Javascript API calls to get book cover image in results page along with book title

--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
                     <img id="authorImage" src="" alt="Author Image" style="display:none;">
                 </div>
             </div>
-            <script src="book_script.js"></script>
+            <script src="script/book_script.js"></script>
         </form>
 
 </body>
