--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/">
+    <link rel="stylesheet" href="styles/results.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.0/milligram.css">
 </head>
 
@@ -13,7 +13,6 @@
     title or author name-->
 
 <body>
-    <script src="book_results.js"></script>
 
     <div class="mainbox">
         <div class="title">
@@ -35,7 +34,7 @@
                         <!-- author image goes here-->
                     </div>
                     <div class="container">
-                        <h3><b></b></h3>
+                        <h3><b>Author Details goes here</b></h3>
                         <!--author name goes here (more headings for extra information can be added)-->
                     </div>
                 </div>
@@ -48,6 +47,7 @@
         </div>
     </div>
     </div>
+    <script src="script/book_result.js"></script>
 </body>
 
 </html>
