--- a/main.html
+++ b/main.html
@@ -16,7 +16,8 @@
 
         <div class="about">
             <p>After selecting a book, this application will use the OpenLibrary,
-                Quotable, and Wiki APIs to generate author information and a quote from the book.
+                Quotable, and Wiki APIs to generate author information and a quote from the book. Please
+                Select a book in the field below.
             </p>
         </div>
 
