--- a/results.html
+++ b/results.html
@@ -21,7 +21,9 @@
     </div>
 
     <div class="search">
-        <p>Select a Book <input type="text" placeholder="Search.."></p>
+        <p>Select a Book </p> 
+        <input type="text" placeholder="Search..">
+        <button id="searchButton" class="btn btn-primary">Search</button>
     </div>
 
     <div class="results">
