--- a/results.html
+++ b/results.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/results.css">
-    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.0/milligram.css">
 </head>
 
@@ -19,10 +18,11 @@
         <div class="title">
             <h1>Bookify API</h1>
         </div>
-    </div>
+    
     <div class="searchbar">
         <input id="bookInput" class="form-control" type="text" placeholder="Search..">
         <button id="searchButton" class="btn btn-primary">Search</button>
+    </div>
     </div>
 
     <div class="results">
@@ -44,7 +44,7 @@
 
             <div class="quote"></div>
             <div class="column">
-                <h3>Quote Goes Here</h3> <!--quote goes here-->
+                <h3>Summary</h3> <!--quote goes here-->
             </div>
         </div>
     </div>
