Adding as function as well as image functionality

--- a/results.html
+++ b/results.html
@@ -45,6 +45,12 @@
             <div class="quote"></div>
             <div class="column">
                 <h3>Summary</h3> <!--quote goes here-->
+                <div class="card">
+                    <div class="bookImage">
+                        <img id="bookCover" src="" alt="Book Cover" style="width:150px;height:180px;">
+                        <!-- author image goes here-->
+                    </div>
+                    <!-- author image goes here-->
             </div>
         </div>
     </div>
