Correct APIs now in use

--- a/results.html
+++ b/results.html
@@ -58,9 +58,9 @@
             </div>
             
             <div class="footer-section">
-                <h4>Quotable API</h4>
-                <p class = "footer-text">Delivers memorable quotes from selected books</p>
-                <a href="https://github.com/lukePeavey/quotable" target="_blank">API Documentation</a>
+                <h4>Book Descriptions - OpenLibrary Api</h4>
+                <p>Specifically delivers a summary about a book</p>
+                <a href="https://openlibrary.org/dev/docs/api/books" target="_blank">API Documentation</a>
             </div>
             
             <div class="footer-section">
