--- a/results.html
+++ b/results.html
@@ -26,36 +26,42 @@
     </div>
 
     <div class="results">
-        <h2 class="BookTitle"></h2> <!-- use to store title of book-->
+        <div id="spinner" style="display: none; text-align: center; margin-top: 20px;">
+            <img src="/styles/loading.gif" alt="Loading..." style="width: 150px; height: 150px;">
+        </div>
+        <div class="content">
 
+            <h2 class="BookTitle"></h2> <!-- use to store title of book-->
+            <div class="container">
+                <div class="row">
+                    <!-- Author Info Section -->
+                    <div class="column author-section">
+                        <div class="card">
+                            <div class="authorInfo">
+                                <h6 class="authorName"></h6>
 
-        <div class="container">
-            <div class="row">
-                <!-- Author Info Section -->
-                <div class="column author-section">
-                    <div class="card">
-                        <div class="authorInfo">
-                            <h6 class="authorName"></h6>
-
-                            <!-- Author image and details will be dynamically populated -->
+                                <!-- Author image and details will be dynamically populated -->
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <!-- Book Info Section -->
-                <div class="column book-section">
-                    <div class="card">
-                        <div class="bookImage">
-                            <img id="bookCover" src="" alt="Book Cover" style="max-width: 200px; border-radius: 10px;">
-                        </div>
-                        <div class="bookDescription">
-                            <h3>Summary</h3>
-                            <p id="bookSummary">The summary of the book will appear here.</p>
+                    <!-- Book Info Section -->
+                    <div class="column book-section">
+                        <div class="card">
+                            <div class="bookImage">
+                                <img id="bookCover" src="" alt="Book Cover"
+                                    style="max-width: 200px; border-radius: 10px;">
+                            </div>
+                            <div class="bookDescription">
+                                <h3>Summary</h3>
+                                <p id="bookSummary">The summary of the book will appear here.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
 
     </div>
     <script src="script/book_result.js"></script>
