--- a/results.html
+++ b/results.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/results.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.0/milligram.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Goudy+Bookletter+1911&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <!-- IMPORTANT: any further comments indicate where results
@@ -17,13 +23,13 @@
     <div class="mainbox">
         <div class="title">
             <h1>Bookify API</h1>
-        
 
-        <div class="searchbar">
-            <input id="bookInput" class="form-control" type="text" placeholder="Search..">
-            <button id="searchButton" class="btn btn-primary">Search</button>
+
+            <div class="searchbar">
+                <input id="bookInput" class="form-control" type="text" placeholder="Search..">
+                <button id="searchButton" class="btn btn-primary">Search</button>
+            </div>
         </div>
-    </div>
     </div>
 
     <div class="results">
@@ -50,12 +56,12 @@
                     <div class="column book-section">
                         <div class="card">
                             <div class="bookImage">
-                                <img id="bookCover" src="" alt="Book Cover"
-                                    style="max-width: 200px; border-radius: 10px;">
+                                <img id="bookCover" src="" alt="Book Cover">
                             </div>
                             <div class="bookDescription">
-                                <h3>Summary</h3>
-                                <p id="bookSummary">The summary of the book will appear here.</p>
+                                <h3>Book Description
+                                </h3>
+                                <p id="bookSummary">The book summary is loading.</p>
                             </div>
                         </div>
                     </div>
