fixed path of loading animation

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </form>
 
         <div id="spinner" style="display: none; text-align: center; margin-top: 20px;">
-            <img src="/styles/loading.gif" alt="Loading..." style="width: 150px; height: 150px;">
+            <img src="styles/loading.gif" alt="Loading..." style="width: 150px; height: 150px;">
         </div>
 
     </div>
