--- a/results.html
+++ b/results.html
@@ -34,7 +34,7 @@
 
     <div class="results">
         <div id="spinner" style="display: none; text-align: center; margin-top: 20px;">
-            <img src="/styles/loading.gif" alt="Loading..." style="width: 150px; height: 150px;">
+            <img src="styles/loading.gif" alt="Loading..." style="width: 150px; height: 150px;">
         </div>
         <div class="content">
 
