changed the description and altered the box styling to accomodate this

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         </div>
 
         <div class="about">
-            <p>After selecting a book, this application will use the OpenLibrary,
-                Quotable, and Wiki APIs to generate author information and a quote from the book. Please
-                Select a book in the field below.
+            <p>After selecting a book, this application will use several APIs to generate information about the author and a summary of the book 
             </p>
         </div>
 
