Added video demo and fixed minor issues

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Goudy+Bookletter+1911&display=swap"
         rel="stylesheet">
-
+    <title>Bookify</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 
         <form action="results.html">
             <div class="search">
-                <h2>Select a Book</h2>
+                <h2>Search a Book</h2>
                 <div class="searchbar">
                     <input id="bookInput" type="text" placeholder="Search..">
                     <button id="searchButton" class="btn btn-primary">Search</button>
