--- a/results.html
+++ b/results.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Goudy+Bookletter+1911&display=swap"
         rel="stylesheet">
+    <title>Bookify</title>
 
 </head>
 
